--- a/src/004_DnCNN Numbers/README
+++ b/src/004_DnCNN Numbers/README
@@ -5,3 +5,6 @@ This project uses 3 .py files:
         with the model called model.h5.
     3_evaluate.py: The model is read from the file model.h5 and tested with an example. Feel free to test different
         examples.
+
+Here you can observe some results of the DnCNN:
+![alt text](https://github.com/Atamarado/tensotflow2/blob/src/004_DnCNN Numbers/results.png?raw=true)
